--- a/QinCloud/login/forget_password.html
+++ b/QinCloud/login/forget_password.html
@@ -32,8 +32,8 @@
 			</div>
 		</div>
 		
-		<script src="js/mui.min.js"></script>
-		<script src="js/app.js"></script>
+		<script src="../js/mui.min.js"></script>
+		<script src="../js/app.js"></script>
 		<script>
 			(function($, doc) {
 				$.init();
